- CHG: Updated gradle build target Java version to 11.